# odsbox-jaquel-mcp

./: .commitlintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROMPTS.md  README.md  TOOLS_GUIDE.md  mcp.json  pyproject.toml  requirements.txt  run_tests.py  server.json  setup.py
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  pr-validation.yml
docs/: setup.md
examples/: usage_examples.py  use_mcp_server.py
odsbox_jaquel_mcp/: __init__.py  __main__.py  _version.py  auth_factory.py  bulk_api_guide.py  connection.py  data_preparation.py  measurement_analysis.py  measurement_queries.py  monitoring.py  notebook_generator.py  prompts.py  queries.py  resources.py  schemas.py  schemas_entity_descriptions.py  schemas_entity_queries.py  schemas_types.py  server.py  server_instructions.md  validators.py  visualization_templates.py
odsbox_jaquel_mcp/resource_files/: __init__.py  resource_connection_troubleshooting.md  resource_jaquel_syntax_guide.md  resource_ods_connection_guide.md  resource_ods_entity_hierarchy.md  resource_ods_workflow_reference.md  resource_query_execution_patterns.md
odsbox_jaquel_mcp/submatrix/: __init__.py  data_reader.py  scripts.py
odsbox_jaquel_mcp/templates/: __init__.j2  advanced_fetcher.j2  analysis_fetcher.j2  basic_fetcher.j2  batch_fetcher.j2  notebook_plot_line.j2  notebook_plot_scatter.j2  notebook_preparation.j2  notebook_retrieval.j2  resource_ods_entity_hierarchy.j2  resource_query_operators_reference.j2  visualization_line.j2  visualization_scatter.j2  visualization_subplots.j2
odsbox_jaquel_mcp/tools/: __init__.py  base_handler.py  connection_tools.py  filter_tools.py  help_tools.py  measurement_tools.py  query_tools.py  schema_tools.py  submatrix_tools.py  validation_tools.py
scripts/: release.sh  setup-hooks.sh
tests/: MCP_TESTING.md  __init__.py  conftest.py  mcp_test_client.py  test_auth_factory.py  test_bulk_api_guide.py  test_data_preparation.py  test_data_reader.py  test_entity_hierarchy.py  test_integration_jaquel_queries.py  test_integration_mcp_server.py  test_integration_mcp_server_e2e.py  test_integration_ods_connection.py  test_jaquel_examples.py  test_jaquel_validator.py  test_mcp_server.py  test_measurement_analysis.py  test_measurement_queries.py  test_monitoring.py  test_notebook_generator.py  test_ods_connection_manager.py  test_ods_connection_manager_factory.py  test_prompts.py  test_resources.py  test_resources_mcp_handlers.py  test_schemas_entity_descriptions.py  test_schemas_entity_queries.py  test_submatrix_scripts.py  test_visualization_templates.py
tests/data/: application_model.json
